# ai-archi-analyzer

./: README.md  env.example  pyproject.toml  requirements.txt  start.py  企业级架构梳理自动化平台总结.md
docs/: examples.md
src/: __init__.py  main.py
src/api/: __init__.py  models.py  routes.py
src/collectors/: __init__.py  base.py  mcp_collector.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  analyzer.py  checkpoint.py  pipeline.py  report_generator.py  task_store.py
src/core/templates/: architecture_report.md.j2
src/processors/: __init__.py  data_transformer.py  data_validator.py  error_handler.py
tests/: conftest.py  test_checkpoint.py  test_data_transformer.py  test_data_validator.py  test_pipeline.py  test_task_store.py
